--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -54,3 +54,8 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    ports:
+      - "1025:1025"
+      - "8025:8025"
