--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -59,3 +59,13 @@ services:
     ports:
       - "1025:1025"
       - "8025:8025"
+  mail-service:
+    build:
+      context: ./../mail-service
+      dockerfile: ./../mail-service/mail-service.dockerfile
+    restart: always
+    ports: 
+      - "8082:80"
+    deploy:
+      mode: replicated
+      replicas: 1
