--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -66,6 +66,15 @@ services:
     restart: always
     ports: 
       - "8082:80"
+    environment:
+      MAIL_DOMAIN: localhost
+      MAIL_HOST: mailhog
+      MAIL_PORT: 1025
+      MAIL_ENCRYPTION: none
+      MAIL_USERNAME: ""
+      MAIL_PASSWORD: ""
+      FROM_NAME: "Joaquin Jimenez"
+      FROM_ADDRESS: "joaquin.jimenez@example.com"
     deploy:
       mode: replicated
       replicas: 1
