--- a/project/k8s/broker.yml
+++ b/project/k8s/broker.yml
@@ -1,33 +1,33 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: rabbitmq
+  name: broker-service
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: rabbitmq
+      app: broker-service
   template:
     metadata:
       labels:
-        app: rabbitmq
+        app: broker-service
     spec:
       containers: 
-      - name: rabbitmq
-        image: "rabbitmq:3.9-alpine"
+      - name: broker-service
+        image: "broker-service:1.0.0"
         ports:
-          - containerPort: 5672
+          - containerPort: 8080
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: rabbitmq
+  name: broker-service
 spec:
   selector:
-    app: rabbitmq
+    app: broker-service
   ports:
     - protocol: TCP
       name: main-port
-      port: 5672
-      targetPort: 5672
+      port: 8080
+      targetPort: 8080
