--- a/project/k8s/frontend.yml
+++ b/project/k8s/frontend.yml
@@ -1,33 +1,33 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: rabbitmq
+  name: frontend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: rabbitmq
+      app: frontend
   template:
     metadata:
       labels:
-        app: rabbitmq
+        app: frontend
     spec:
       containers: 
-      - name: rabbitmq
-        image: "rabbitmq:3.9-alpine"
+      - name: frontend
+        image: "frontend:1.0.0"
         ports:
-          - containerPort: 5672
+          - containerPort: 80
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: rabbitmq
+  name: frontend
 spec:
   selector:
-    app: rabbitmq
+    app: frontend
   ports:
     - protocol: TCP
       name: main-port
-      port: 5672
-      targetPort: 5672
+      port: 80
+      targetPort: 80
